--- a/NewProjectInEntityFrameWork/Views/Login/Success.cshtml
+++ b/NewProjectInEntityFrameWork/Views/Login/Success.cshtml
@@ -5,9 +5,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Trade 2 Profit</title>
+    <title>Entity Core Demo</title>
     <meta charset="utf-8" />
-    <meta name="author" content="trade2profit.live" />
+    <meta name="author" content="entity.live" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Crypto Science | Legal and Reliable Crypto Coin" />
     <!-- Fav Icon -->
